--- a/移动端问题/移动端适配问题.md
+++ b/移动端问题/移动端适配问题.md
@@ -21,6 +21,8 @@
 
 <meta name="viewport" content="width=device-width; initial-scale=1">
 
+使用rem和vw来匹配
+
 3 1px问题
     ·background-image //把这个1像素当做图片
     ·transform:scale() 来做 设备像素比
