--- a/TypsScript/为第三方库添加声明文件.md
+++ b/TypsScript/为第三方库添加声明文件.md
@@ -1,5 +1,7 @@
-先在某个文件夹下新增 xxx.d.ts 文件
 
+1. 先在某个文件夹下新增 xxx.d.ts 文件
+
+```ts
 declare module 'crypto-js' {
   export const AES: {
     decrypt: (txt: string, key: string) => any
@@ -9,9 +11,6 @@ declare module 'crypto-js' {
     Utf8: string
   };
 }
+```
 
-再把这个文件夹的路径添加到
-
-tsconfig.json中的
-
-"include": ["src"]
+2. 再把这个文件夹的路径添加到 tsconfig.json中的 "include": ["src"]
