--- a/nodejs/流式下载.md
+++ b/nodejs/流式下载.md
@@ -41,34 +41,35 @@ export class StreamController {
 }
 ```
 
-#### URL.createObjectURL() 和 FileReader.readAsDataURL() 区别
+## URL.createObjectURL() 和 FileReader.readAsDataURL() 区别
 
-区别
+- 区别
 
-（1）返回值
+  1.  返回值
 
-        FileReader.readAsDataURL(blob)可以得到一段base64的字符串
-        URL.createObjectURL(blob)得到的是当前文件的一个内存url
+      - FileReader.readAsDataURL(blob)可以得到一段 base64 的字符串
+      - URL.createObjectURL(blob)得到的是当前文件的一个内存 url
 
-（2）内存使用
+  2.  内存使用
 
-         FileReader.readAsDataURL(blob)得到一段超长的base64的字符串
-         URL.createObjectURL(blob)得到的是一个url地址
+      - FileReader.readAsDataURL(blob)得到一段超长的 base64 的字符串
+      - URL.createObjectURL(blob)得到的是一个 url 地址
 
-（3）内存清理
+  3.  内存清理
 
-          FileReader.readAsDataURL(blob)依照js垃圾回收机制自动从内存中清理
-          URL.createObjectURL(blob)存在于当前document内，清除方式只有upload()事件或者revokeObjectURL()手                    动清除 
+      - FileReader.readAsDataURL(blob)依照 js 垃圾回收机制自动从内存中清理
+      - URL.createObjectURL(blob)存在于当前 document 内，清除方式只有 upload()事件或者 revokeObjectURL()手动清除
 
-（4）执行方式
-          
-          FileReader.readAsDataURL(blob)通过回调的方式f返回，异步执行；
-          URL.createObjectURL(blob) 直接返回，同步执行；
+  4.  执行方式
 
-（5）多个文件
-          
-          FileReader.readAsDataURL(blob)同时处理多个文件时，需要一个文件对应一个FileReader对象；
-          URL.createObjectURL(blob) 依次返回，没有影响；
-总结
-URL.createObjectURL(blob) 得到本地内存容器的URL地址，方便预览，多次使用需要注意手动释放内存的问题，性能优秀。
-FileReader.readAsDataURL(blob)胜在直接转为base64格式，可以直接用于业务，无需二次转换格式。
+      - FileReader.readAsDataURL(blob)通过回调的方式 f 返回，异步执行
+      - URL.createObjectURL(blob) 直接返回，同步执行；
+
+  5.  多个文件
+  
+      - FileReader.readAsDataURL(blob)同时处理多个文件时，需要一个文件对应一个 FileReader 对象；
+      - URL.createObjectURL(blob) 依次返回，没有影响；
+
+- 总结
+  - URL.createObjectURL(blob) 得到本地内存容器的 URL 地址，方便预览，多次使用需要注意手动释放内存的问题，性能优秀。
+  - FileReader.readAsDataURL(blob)胜在直接转为 base64 格式，可以直接用于业务，无需二次转换格式。
