--- a/未完成目录.md
+++ b/未完成目录.md
@@ -1,4 +1,5 @@
 
-1. postMessage 4/14
-2. requestIdleCallback和requestAnimationFrame  4/14
-3. Application Cache  4/14
++ postMessage 4/14
++ requestIdleCallback和requestAnimationFrame  4/14
++ Application Cache  4/14
++ https://zhuanlan.zhihu.com/p/53599723 关于 Vuex、Flux、Redux、Redux-saga、Dva、MobX 的文章
