--- a/TypsScript/高级用法.md
+++ b/TypsScript/高级用法.md
@@ -67,3 +67,21 @@ type TypeToNumber<T> = {
   [key in keyof T]: number
 }
 ```
+
+## 泛型推断 infer
+> 这个是泛型推断 不需要预先指定在泛型列表中 在运行时会自动推断
+
+如有以下类型
+```ts
+type Foo<T> = T extends { t: infer R } ? R : string
+```
+上面的 R 类型 是t的value的类型  在运行时进行推断并赋值给 R 类型。  
+最终 Foo 的类型表示为 如果 传入的类型 继承与 {t: any} 则 类型为 t 的value(typeof object.t) 否者 为string 类型
+以下: 
+```ts
+type One = Foo<number> // One 的类型为 string 类型，因为 number 不是继承与 {t: any}
+
+type Two = Foo<{t: boolean}> // Two 的类型为 boolean 因为 泛型约束成立 最终值为t 的 类型
+
+type Three = Foo<{a: number, t: () => void}> // () => void，泛型定义是参数的子集，同样适配
+```
