--- a/工具类/eslint/.eslintrc.json.md
+++ b/工具类/eslint/.eslintrc.json.md
@@ -23,6 +23,14 @@
 }
 ```
 
+### 当 eslint 插件和命令行 对于导入（import/resolve）冲突时 需要配置 workingDirectories
+```json
+{
+    "eslint.workingDirectories": [
+        "./website",
+    ]
+}
+```
 ### 配置
 ```json
 {
