--- a/RegExp/常用的正则.md
+++ b/RegExp/常用的正则.md
@@ -6,3 +6,10 @@
 ### /^(?=.*\d)(?=.*[a-zA-Z])([0-9a-zA-Z]){6,30}$/ // 密码由 6~30 位数字、字母组成，并同时含数字和字母
 
 ### /^[a-zA-Z0-9\u4e00-\u9fa5\.\s]{1,32}$/  // 姓名由 1~32 位中文、字母、空格及 . 组成
+
+### /(?<= `|'|")\/.*?(?=`|'|")/g // 匹配框架中的serverz中的路径问题
+```js
+Object.getOwnPropertyNames(CustomsAJAXService); // 排除 "length" "prototype" "name"
+CustomsAJAXService.deleteUsingPOST.toString().match(/(?<= `|'|")\/.*?(?=`|'|")/g)
+
+```
